[zhengsuqin] add the input box and add buttons of the header of todo list

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 	</head>
 
 	<body>
-    <div class="todo-list">
-      <div class="header">
-        <h2>To Do List</h2>
-        <p>Simple Todo List with adding and filter by diff status.</p>
-      </div>
-    </div>
-  </body>
+		<div class="todo-list">
+			<div class="header">
+				<h2>To Do List</h2>
+				<p>Simple Todo List with adding and filter by diff status.</p>
+				<div class="add-task">
+					<input type="text" name="task" />
+					<button class="add-btn">Add</button>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
