[zhengsuqin] complete the function of add task-list

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 				<h2>To Do List</h2>
 				<p>Simple Todo List with adding and filter by diff status.</p>
 				<div class="add-task">
-					<input type="text" name="task" />
+					<input type="text" name="task" id="task-input" />
 					<button class="add-btn">Add</button>
 				</div>
 			</div>
+			<ol></ol>
 		</div>
+		<script src="static/script/index.js"></script>
 	</body>
 </html>
