[zhengsuqin] feat: complete three bottons' style in the footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 					<button class="add-btn">Add</button>
 				</div>
 			</div>
-			<ol></ol>
+      <ol></ol>
+      <div class="footer">
+        <button class="status-btn">ALL</button>
+        <button class="status-btn">Active</button>
+        <button class="status-btn">Complete</button>
+      </div>
 		</div>
 		<script src="static/script/index.js"></script>
 	</body>
