[zhengsuqin] feat: complete the function to display diff task when click diff button

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 				<p>Simple Todo List with adding and filter by diff status.</p>
 				<div class="add-task">
 					<input type="text" name="task" id="task-input" />
-					<button class="add-btn">Add</button>
+					<button class="add-btn" name="add-btn">Add</button>
 				</div>
 			</div>
       <ol></ol>
       <div class="footer">
-        <button class="status-btn">ALL</button>
-        <button class="status-btn">Active</button>
-        <button class="status-btn">Complete</button>
+        <button class="status-btn" name="all">ALL</button>
+        <button class="status-btn" name="to-do">Active</button>
+        <button class="status-btn" name="done">Complete</button>
       </div>
 		</div>
 		<script src="static/script/index.js"></script>
